# RootAsRole-gensr

./: Cargo.toml  README.md  result.json
src/: capable.rs  deploy.rs  main.rs  policy.rs  rootasrole_polkit.js
