[package]
name = "RootAsRole-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gensr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
posix-acl = "1.2.0"
rootasrole-core = "3.0.3"
serde = "1.0.215"
serde_json = "1.0.132"
nix = { version = "0.29.0", features = ["user"] }
clap = { version = "4.5.21", features = ["derive"] }
bitflags = "2.6.0"
sha2 = "0.10.8"
hex = "0.4.3"
easy-xml = "0.1.4"
sxd-document = "0.3.2"
env_logger = "0.11.5"
log = "0.4.22"
tempfile = "3.14.0"
