[package]
name = "RootAsRole-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gensr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
posix-acl = "1.2.0"
rootasrole-core = "3.0.4"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
nix = { version = "0.29.0", features = ["user"] }
clap = { version = "4.5.23", features = ["derive"] }
bitflags = "2.6.0"
sha2 = "0.10.8"
hex = "0.4.3"
easy-xml = "0.1.4"
sxd-document = "0.3.2"
env_logger = "0.11.6"
log = "0.4.22"
tempfile = "3.14.0"
capctl = "0.2.4"
bon = "3.3.2"
which = "7.0.1"
